--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ Project Name: [AirBnB_clone]
 
 Contributors:
 
-- Youssef Hammani <youssefhammani04@gmail.com>
+Youssef Hammani < youssefhammani04@gmail.com >
